--- a/app/src/main/res/layout/row_manus.xml
+++ b/app/src/main/res/layout/row_manus.xml
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="Titulo del pokemon"
+                    android:text="Pais"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
@@ -69,7 +69,7 @@
                         android:layout_marginEnd="10sp"
                         android:ellipsize="end"
                         android:maxLines="2"
-                        android:text="Rareza:"
+                        android:text="Slogan:"
                         android:textColor="#090909"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -82,7 +82,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="2"
-                        android:text="Rareza del pkm"
+                        android:text="Slogan"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -98,35 +98,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_gravity="center">
-
-
-                    <TextView
-                        android:id="@+id/Vida"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="6dp"
-                        android:ellipsize="end"
-                        android:maxLines="2"
-                        android:text="Vida:"
-                        android:textColor="#090909"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-
-                    <TextView
-                        android:id="@+id/tvHp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLines="2"
-                        android:text="0"
-                        android:layout_marginStart="10dp"
-                        android:textColor="#FF0000"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
+                    android:layout_gravity="center"/>
 
             </LinearLayout>
 
